--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 /* 清除默認樣式 */
 * {
     margin: 0;
@@ -31,368 +30,109 @@ body {
     margin: 0 auto;
 }
 
-
-/* 網頁頭部 */
-.header {
-    height: 42px;
-    margin: 30px auto;
-}
-
-/* LOGO首頁圖 */
-h1 {
-    float: left;
-}
-
-/* logo大小尺寸 */
-h1 a img {
-    width: 195px;
-    height: 42px;
-    /*border: 1px solid skyblue;*/
-}
-
-.nav {
-    float: left;
-    margin-left: 70px;
-
-    height: 42px;
-    font-size: 18px;
-    color: #050505;
-
-}
-
-.nav li {
-    float: left;
-    margin-right: 26px;
-
-}
-.nav a {
-    display: block;
-    padding: 0 9px;
-
-    /*background-color: #4c4c4c;*/
-    height: 42px;
-    line-height: 42px;
-    color: #050505;
-    font-size: 18px;
-
-
-}
-
-.nav li a:hover {
-    border-bottom: 2px solid rgba(239, 146, 78, 0.35);
-}
-
-.search {
-    float: left;
-    margin-left: 59px;
-
-    width: 412px;
+.top {
     height: 40px;
-
-    border: 1px solid #00a4ff;
-
+    background-color: rgba(246, 146, 196, 0.65);
+    text-align: center;
+    line-height: 40px;
 }
-.search input {
+
+.top h2 {
+    font-size: 25px;
+    color: #f3f5f7;
+}
+.title {
+    margin-top: 30px;
+    height: 50px;
+    /*background-color: hotpink;*/
+}
+
+.title .left {
     float: left;
-    padding-left: 20px;
+    height: 50px;
+    width: 400px;
 
-    /* 寬度-2了 因左右加一起需剛好 但被線的粗細干擾*/
-    width: 360px;
-    height: 38.5px;
-    border: 0;
+    /*background-color: skyblue;*/
 }
 
-.search input::placeholder {
-    color: #4c4c4c;
-    font-size: 14px;
+.title .left a {
+    display: inline-block;
+    padding: 0 15px;
+    /*width: 50px;*/
+    height: 50px;
+    font-size: 18px;
+    color: #727171;
+
+    text-align: center;
+    line-height: 50px;
+
+}
+.title .left span {
+    padding-bottom: 10px;
+    border-bottom: 2px solid rgba(135, 206, 235, 0.54);
+}
+.title .left a:hover {
+    color: black;
+    font-weight: 700;
+    background-color: rgba(250, 235, 215, 0.51);
 }
 
-.search button {
+
+
+.title .midLogo {
     float: left;
-    width: 45px;
-    height: 38.5px;
-    background-image: url("../images/btn.png");
-    border: 0px;
+    width: 400px;
+    height: 50px;
+    background-color: gray;
+}
+.title .midLogo h1 img {
+    width: 400px;
+    height: 50px;
 }
 
-.user {
+.title .right {
     float: right;
-    margin-right: 35px;
-
-    height: 42px;
-    line-height: 42px;
-    /*border: 1px black solid;*/
+    width: 400px;
+    height: 50px;
+    /*background-color: goldenrod;*/
 }
-.user img {
-    /* 調節圖片垂直 對齊方式 */
-    vertical-align: middle;
-    width: 30px;
+
+.title .right img {
+    float: right;
+    width: 200px;
     height: 30px;
-    border-radius: 99px;
 }
 
 /* 輪播圖 */
 .banner {
-    height: 420px;
-    background-color: #2c5468;
+    margin-top: 30px;
+    height: 400px;
+    /*background-color: rgba(236, 186, 253, 0.54);*/
 }
-
-.banner .wrapper {
-    height: 420px;
-    background-image: url("../myimg/banner01.jpg    ");
+.banner .bannerIMG {
+    height: 400px;
+    background-image: url("../images/banner01.jpg");
 }
-
-.banner .left {
+.bannerIMG .left {
     float: left;
-    padding: 0 20px;
+    margin-left: 20px;
+    width: 170px;
+    background-color: rgba(23, 14, 26, 0.7);
 
-    width: 190px;
-    /*height: 420px;*/
-    background-color: rgba(0, 0, 0, .3);
-
-    font-size: 14px;
-    line-height: 44px;
 }
+.bannerIMG .left li{
 
-.banner .left a {
-    color: #fff;
-}
-
-.banner .left span {
-    float: right;
-}
-
-.banner .left a:hover {
-    color: #00b4ff;
-}
-
-
-.banner .right {
-    float: right;
-    margin-top: 50px;
-    width: 228px;
-    height: 300px;
-    background-color: #fff;
-}
-
-.banner .right h2 {
-    height: 48px;
-    background-color: #9bceea;
-
-    text-align: center;
-    line-height: 48px;
-
-    font-weight: 700;
+    margin: 20px;
     font-size: 18px;
-    color: #fff;
+
+
 }
-
-.banner .right .content {
-    margin: 0 18px;
+.bannerIMG .left li a {
+    color: #f8f7f7;
+    /*float: left;*/
+    padding-bottom: 5px;
+    /*border-bottom: 2px solid rgba(96, 109, 122, 0.59);*/
 }
-
-.banner .right .content dl {
-    padding: 12px 0;
-    border-bottom: 2px solid #e0dddd;
-}
-
-.banner .right .content dt {
-    color: #4e4e4e;
-    font-size: 16px;
-}
-.banner .right .content dd a {
-    color: rgba(121, 120, 120, 0.89);
-    font-size: 12px;
-}
-.banner .right .more {
-    display: block;
-    margin: 4px auto 0;
-
-    width: 200px;
-    height: 40px;
-    border: 1px solid #00a4ff;
-    text-align: center;
-
-
-    font-size: 16px;
-    color: #00a4ff;
-    font-weight: 700;
-    line-height: 40px;
-}
-
-/* 精品推薦 */
-.goods {
-    margin-top: 8px;
-    padding-left: 34px;
-    padding-right: 26px;
-    height: 60px;
-
-    line-height: 60px;
-    border-bottom: 1px solid #868686;
-}
-.goods h2 {
-    float: left;
-    margin-right: 30px;
-
-    font-size: 16px;
-    color: #5656d5;
-}
-.goods ul li {
-    float: left;
-
-    height: 60px;
-    /*background-color: #4c4c4c;*/
-    text-align: center;
-}
-.goods .like {
+.bannerIMG .left li span {
     float: right;
-
-    font-size: 14px;
-    color: #00a4ff;
-}
-.goods li a {
-    padding: 0 30px;
-    color: #050505;
-    /*background-color: skyblue;*/
-
-    border-left: 1px solid #bfbfbf;
-}
-.goods ul li:hover {
-    background-color: rgba(222, 151, 143, .25);
-}
-
-
-
-/* 精品推薦課程 */
-.box {
-    margin-top: 35px;
-}
-
-.box .title {
-    height: 40px;
-    /*background-color: skyblue;*/
-}
-.box .title h2 {
-    float: left;
-    color: #494949;
-    font-weight: 400;
-    font-size: 20px;
-}
-
-.box .title a {
-    float: right;
-    margin-right: 31px;
-    display: inline-block;
-
-    font-size: 12px;
-    color: #a5a5a5;
-}
-
-.box .content li {
-    float: left;
-    margin: 0 15px 15px 0;
-
-    width: 228px;
-    height: 270px;
-    /*background-color: hotpink;*/
-}
-
-.box .content li:nth-child(5n) {
-    margin: 0 0 15px 0;
-}
-.box .content li a {
-}
-
-.box .content li a img {
-    float: left;
-
-    width: 228px;
-    height: 155px;
-
-}
-.box .content li a .info {
-    float: left;
-    padding: 15px 15px 0 15px;
-
-    height: 119px;
-    /*border: 1px solid rgba(126, 125, 125, 0.51);*/
-    /*border-top: 0px;*/
-
-    /*background-color: #4b319b;*/
-}
-.box .content li a .title {
-    float: left;
-    height: 35px;
-    /*background-color: #4c4c4c;*/
-
-}
-
-.box .content li a h3 {
-    font-size: 14px;
-    color: #050505;
-}
-
-.box .content li a p {
-    float: right;
-    margin-top: 10px;
-
-    font-size: 12px;
-    color: #999;
-}
-
-.box .content li a p span {
-    font-size: 15px;
-    color: #ff7c2d;
-}
-
-/* 版權 */
-.footer {
-    margin-top: 40px;
-    padding-top: 33px;
-
-    height: 417px;
-}
-
-.footer .left {
-    float: left;
-}
-
-.footer .left img {
-    width: 195px;
-    height:42px;
-}
-
-
-.footer .right {
-    float: right;
-}
-
-.footer .left p {
-    margin-top: 17px;
-    margin-bottom: 20px;
-    font-size: 12px;
-    color: #666;
-}
-
-.footer .left a {
-    padding: 11px 30px 10px 27px;
-    border: 1px solid #00a4ff;
-
-    font-size: 16px;
-    color: #00a4ff;
-}
-
-.footer .right dl {
-    float: left;
-    margin-left: 120px;
-}
-
-.footer .right dt a {
-    font-size: 16px;
-    color: #9f5526;
-    font-weight: 700;
-}
-.footer .right dd a {
-    font-size: 12px;
-    color: #333333;
 }
