--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,28 @@ body {
     margin: 0 auto;
 }
 
+/* 網頁右側固定清單 */
+.listLeft {
+    position: fixed;
+    right: 20px;
+    top: 85px;
+
+    width: 70px;
+    height: 300px;
+    /*background-color: slategray;*/
+}
+
+.listLeft p{
+    font-size: 14px;
+}
+
+.listLeft img {
+    width: 50px;
+    height: 50px;
+}
+
+/* 網頁頭部 */
+
 .top {
     height: 40px;
     background-color: rgba(246, 146, 196, 0.65);
@@ -135,4 +157,8 @@ body {
 }
 .bannerIMG .left li span {
     float: right;
+}
+
+.footer {
+    height: 600px;
 }
